# Supercharge

./: .gitignore  Cargo.toml  Supercharge.ps1  Supercharge.psd1  Supercharge.psm1  Supercharge071.psm1  _supercharge.psm1  build.ps1  go.mod  go.sum  init.ps1  supercharge.psd1  supercharge.psm1
BuildScripts/: Files.ps1  OpenRouter.ps1
BuildScripts/Helpers/OpenRouter/: Format-Message.ps1  Get-Models.ps1  New-Chat.ps1  New-StreamReader.ps1  New-StreamRequest.ps1  Open-Prompts.ps1  Open-Settings.ps1  Read-StreamLine.ps1  (+1 more)
BuildScripts/OpenRouter/: OpenRouter.ps1
Scripts/: Files.ps1  OpenRouter.ps1
Scripts/Menu/: FilesMenu.ps1  HomeMenu.ps1
cmd/: main.go
cmd/chat/: chat.go
cmd/supercharge/: main.go
go-src/chat/: chat.go  main.go
go-src/notes/: list.go  main.go
internal/blobstorage/: types.go
internal/chat/: chat.go
internal/files/: files.go
internal/menu/: menu.go
internal/notes/: notes.go
internal/openrouter/: openrouter.go  openrouter_types.go  types.go
internal/root/: root.go
scripts/: chat.ps1  close_processes.ps1  find_duplicates.ps1  init.ps1
scripts/helpers/: Read-Menu.psm1  build.ps1
src/: binary.rs  main.rs  menu.rs  statics.rs
src/api/: blobstorage.rs  mod.rs  openrouter.rs  types.rs
src/blobstorage/: mod.rs  types.rs
src/data/: blobstorage.rs  mod.rs  openrouter.rs  types.rs
src/download/: loop.rs  mod.rs
src/menu/: cursor.rs  input.rs  loop.rs  mod.rs
src/openrouter/: mod.rs  new_chat.rs  types.rs
src/read-menu/: Cargo.toml
src/scripts/: mod.rs
src/settings/: mod.rs
src/shared/: mod.rs  statics.rs
src/snippets/: mod.rs
src/terminal/: colors.rs  console.rs  cursor.rs  input.rs  mod.rs
src/utils/: mod.rs
(+125 files in other folders)
