[package]
name = "supercharge"
version = "0.2.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console"
]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
futures-util = "0.3"
