[package]
name = "supercharge"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "su"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console"
]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-xml-rs = "0.8"
rfd = "0.16.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1.12.2"
clipboard-win = "5.4.1"
md5 = "0.8.0"
base64 = "0.22.1"
time = { version = "0.3.44", features = ["formatting"] }
httpdate = "1.0.3"
walkdir = "=2.3.2"