[package]
name = "supercharge"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "su"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-xml-rs = "0.8"
rfd = "0.16.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
regex = "1.12.2"
md5 = "0.8.0"
base64 = "0.22.1"
time = { version = "0.3.44", features = ["formatting"] }
httpdate = "1.0.3"
walkdir = "2.5.0"
urlencoding = "2.1.3"
csv = "1.4.0"
arboard = "3.6.1"
arc-swap = "1.8.2"
crossterm = "0.29.0"
